# JacOfAllTrades

./: README.md  agents.md  main.py  prompt_schema.json  pyproject.toml  requirements.txt  test_output.txt
config/: example_acp.json
data/raw/synthetic_visualization_sinks/: meta_analysis_sample.json  synthdata1.json  synthdata2.json  synthdata4.json  synthdata5.json  synthdata6.json  synthdata7.json  synthdata8.json  synthdata9.json
docs/: README.md  phase2_architecture.md
docs/architecture/: alpaca-requirements.adoc  jack-of-all-trades.adoc  project-architecture.adoc  unit-testing.adoc  visualization-sink.adoc
docs/context/: installation-guide.md
src/agent/: __init__.py  core.py  handlers.py  models.py
src/core/primitives/: __init__.py  data_ref.py  financial_insight.py  ticker.py  visualization_sink.py
src/core/providers/: claude_quant_llm_provider.py  stub_quant_llm_provider.py
src/core/services/: __init__.py  safe_lambda_readers.py  vibe_pipeline.py  visualization_service.py  visualization_sink_factory.py
src/interfaces/: protocols.py
src/io/: __init__.py  transport.py
src/transport/: acp_bridge.py  acp_transport.py  session_manager.py  stdio_handler.py
tests/: test_acp_bridge.py  test_acp_transport.py  test_agent_stability.py  test_agent_stdio_communication.py  test_financial_insight_service.py  test_integration_stdio.py  test_portfolio_context.py  test_primitives.py  test_vibe_pipeline.py  test_visualization_service.py  utils.py
tests/core/primitives/: test_data_ref.py
tests/core/services/: test_visualization_sink_factory.py
(+15 files in other folders)
